                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-11-2006 changed: switch to using D3DXCreateTexture to allow gfx that doesn't support non power of 2 textures (they may still display abit wrong)
 - 20-11-2006 changed: simplified ttf text renderer, and reducing special casing for win32 build
 - 19-11-2006 added: Recommendations radio to last.fm directory.
 - 18-11-2006 added: HttpApi can now be called using the more usual function calling syntax i.e. function(x;y;z)
 - 18-11-2006 added: HttpApi broadcast capabilities (see wiki help pages (in a day or so)) and broadcasting of PlayBack events
 - 17-11-2006 changed: disabled the Randomize button in My Music Now Playing window.  Shuffle state is now saved.
	When enabed, new songs get added to the Now Playing window in a shuffled order.
	If the playlist is being played when new songs are added, the new songs will be shuffled into the playlist
	two positions below the currently playing song.
	If the playlist is not being played, the new songs are just added at the bottom in a shuffled order and
	playback will begin from the first new song.
	(This is the start of the removal of the _TEMP internal playlists, and the Randomize button.)
 - 17-11-2006 added: "Switch Media" dialog to the context menu to switch between media windows (files windows only)
 - 16-11-2006 fixed: Paths to DSound.h and DInput.h were unnecessary.
 - 16-11-2006 fixed: Grouplist's viewport was an intersection with the previous viewport, when it shouldn't have been.
 - 16-11-2006 added: Initial skin version 2.1 changes and support for building for win32.
 - 15-11-2006 fixed: paplayer would fail to play mono AC3 files properly.