@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-11-2006 added: overriding of the yes/no labels to the python yesno dialog.
  - 20-11-2006 changed: switch to using D3DXCreateTexture to allow gfx that doesn't support non power of 2 textures (they may still display abit wrong)
  - 20-11-2006 changed: simplified ttf text renderer, and reducing special casing for win32 build
  - 19-11-2006 added: Recommendations radio to last.fm directory.
